--- a/CategorySurface.mediawiki
+++ b/CategorySurface.mediawiki
@@ -20,7 +20,7 @@ This category contains functions for handling surface creation and blitting as w
 <<FullSearchCached(category:CategoryStruct CategorySurface -SGStructures)>>
 
 == Functions ==
-<<FullSearchCached(category:CategorySurface -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearch(category:CategorySurface -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
