--- a/SDL_FlushEvent.mediawiki
+++ b/SDL_FlushEvent.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_FlushEvent =
-Use this function to clear ^an^ event,,s,, from the event queue.
+Use this function to clear events from the event queue.
 
 
 == Syntax ==
@@ -14,7 +13,7 @@ void SDL_FlushEvent(Uint32 type)
 == Function Parameters ==
 {|
 |'''type'''
-|^the type of event to be cleared???; see [[SDL_Event]]/[[SDL_EventType]] ??? for details^
+|the type of event to be cleared; see [[SDL_EventType]] for details
 |}
 
 == Code Examples ==
@@ -23,7 +22,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+This will unconditionally remove any events from the queue that match '''type'''. If you need to remove a range of event types, use [[SDL_FlushEvents]] instead.
+
+It's also normal to just ignore events you don't care about in your event loop.
 
 == Related Functions ==
 :[[SDL_FlushEvents]]
