--- a/SDL_FlushEvent.mediawiki
+++ b/SDL_FlushEvent.mediawiki
@@ -22,7 +22,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-This will unconditionally remove any events from the queue that match '''type'''. If you need to remove a range of event types, use [[SDL_FlushEvents]] instead.
+This will unconditionally remove any events from the queue that match '''type'''. If you need to remove a range of event types, use [[SDL_FlushEvents]]() instead.
 
 It's also normal to just ignore events you don't care about in your event loop.
 
