--- a/SDL_FlushEvent.mediawiki
+++ b/SDL_FlushEvent.mediawiki
@@ -24,7 +24,7 @@ You can add your code example here
 == Remarks ==
 This will unconditionally remove any events from the queue that match '''type'''. If you need to remove a range of event types, use [[SDL_FlushEvents]]() instead.
 
-It's also normal to just ignore events you don't care about in your event loop.
+It's also normal to just ignore events you don't care about in your event loop without calling this function.
 
 == Related Functions ==
 :[[SDL_FlushEvents]]
