--- a/SDL_SetEventFilter.mediawiki
+++ b/SDL_SetEventFilter.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_SetEventFilter =
 Use this function to set up a filter to process all events before they change internal state and are posted to the internal event queue.
@@ -57,8 +56,8 @@ Note: Events pushed onto the queue with [[SDL_PushEvent]]() get passed through t
 :[[SDL_AddEventWatch]]
 :[[SDL_EventState]]
 :[[SDL_GetEventFilter]]
-:[[SDL_PeepEvents]] *???
-:[[SDL_PushEvent]] *???
+:[[SDL_PeepEvents]]
+:[[SDL_PushEvent]]
 
 ----
 [[CategoryAPI]], [[CategoryEvents]]
