--- a/SDL_PumpEvents.mediawiki
+++ b/SDL_PumpEvents.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_PumpEvents =
 Use this function to pump the event loop, gathering events from the input devices.
@@ -19,12 +18,13 @@ You can add your code example here
 == Remarks ==
 This function updates the event queue and internal input device state.
 
-This should only be run in the thread that sets the video mode.  <<Color2(green,Is this a serious enough note that it should have an icon to emphasize it?)>>
+/!\ This should only be run in the thread that sets the video mode, and for extra safety, you should consider only doing those things on the main thread in any case.
 
-*<br/>[[SDL_PumpEvents]]() gathers all the pending input information from devices and places it on the event queue. Without calls to [[SDL_PumpEvents]]() no events would ever be placed on the queue. Often the need for calls to [[SDL_PumpEvents]]() is hidden from the user since [[SDL_PollEvent]]() and [[SDL_WaitEvent]]() implicitly call [[SDL_PumpEvents]](). However, if you are not polling or waiting for events (e.g. you are filtering them), then you must call [[SDL_PumpEvents]]() to force an event queue update.<br/>*
+[[SDL_PumpEvents]]() gathers all the pending input information from devices and places it in the event queue. Without calls to [[SDL_PumpEvents]]() no events would ever be placed on the queue. Often the need for calls to [[SDL_PumpEvents]]() is hidden from the user since [[SDL_PollEvent]]() and [[SDL_WaitEvent]]() implicitly call [[SDL_PumpEvents]](). However, if you are not polling or waiting for events (e.g. you are filtering them), then you must call [[SDL_PumpEvents]]() to force an event queue update.
 
 == Related Functions ==
-:[[SDL_PollEvent]] *
+:[[SDL_PollEvent]]
+:[[SDL_WaitEvent]]
 
 ----
 [[CategoryAPI]], [[CategoryEvents]]
