--- a/SDL_PushEvent.mediawiki
+++ b/SDL_PushEvent.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_PushEvent =
 Use this function to add an event to the event queue.
@@ -17,10 +16,8 @@ int SDL_PushEvent(SDL_Event* event)
 | the [[SDL_Event]] to be added to the queue
 |}
 
-<<Color2(green,Most other functions w/ the event param say "If not NULL the next event is removed from the queue and stored in that area."  Does that apply here?)>>
-
 == Return Value ==
-Returns 1 on success, 0 if the event was filtered, or a negative error code on failure; call [[SDL_GetError]]() for more information.  A common error, if the event queue was full, returns -1.
+Returns 1 on success, 0 if the event was filtered, or a negative error code on failure; call [[SDL_GetError]]() for more information.  A common reason for error is the event queue being full.
 
 == Code Examples ==
 ```c++
@@ -28,25 +25,20 @@ You can add your code example here
 ```
 
 == Remarks ==
-*The event queue can actually be used as a two way communication channel. Not only can events be read from the queue, but the user can also push their own events onto it. '''event''' is a pointer to the event structure you wish to push onto the queue. The event is copied into the queue, and the caller may dispose of the memory pointed to after [[SDL_PushEvent]]() returns.
+The event queue can actually be used as a two way communication channel. Not only can events be read from the queue, but the user can also push their own events onto it. '''event''' is a pointer to the event structure you wish to push onto the queue. The event is copied into the queue, and the caller may dispose of the memory pointed to after [[SDL_PushEvent]]() returns.
 
 Note: Pushing device input events onto the queue doesn't modify the state of the device within SDL. 
 
-This function is thread safe, and can be called from other threads safely. *
+This function is thread safe, and can be called from other threads safely.
 
-<!-- #<<Color2(green,This was listed after the function description. Does it belong on this page?)>> -->
-<!-- # ``` -->
-##int SDL_EventFilter(void*      userdata,
-##                    SDL_Event* event);
-##```
+Note: Events pushed onto the queue with [[SDL_PushEvent]]() or [[SDL_PeepEvents]]() do not get passed through the event filter.
 
-*<<Color2(green,The following was a note on the [[SDL_SetEventFilter]] page from 1.2.  Is it incorrect given the RV for this function regarding filtering?  Or is there another way to filter that this function can't bypass?  Should this note be removed from [[SDL_SetEventFilter]]?)>>
-
-Note: Events pushed onto the queue with [[SDL_PushEvent]]() or [[SDL_PeepEvents]]() do not get passed through the event filter. *
+For pushing application-specific events, please use [[SDL_RegisterEvents]]() to get an event type that does not conflict with other code that also wants its own custom event types.
 
 == Related Functions ==
 :[[SDL_PeepEvents]]
 :[[SDL_PollEvent]]
+:[[SDL_RegisterEvents]]
 
 ----
 [[CategoryAPI]], [[CategoryEvents]]
