--- a/SDL_mutexV.mediawiki
+++ b/SDL_mutexV.mediawiki
@@ -1,48 +1,1 @@
-<!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
-'''DRAFT'''
-
-= SDL_mutexV =
-Use this function to unlock ,,the,, ^a^ mutex.
-
-
-== Syntax ==
-```c++
-int SDL_mutexV(SDL_mutex* mutex)
-```
-
-== Function Parameters ==
-{|
-|'''mutex'''
-|^the SDL_mutex to unlock^
-|}
-
-== Return Value ==
-Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
-
-== Code Examples ==
-```c++
-You can add your code example here
-```
-
-== Remarks ==
-It is an error to unlock a mutex that has not been locked by the current thread, and doing so results in undefined behavior.
-
-*<br/>SDL also defines a macro <code>#define SDL_UnlockMutex(m) SDL_mutexV(m)</code>. <br/>*
-
-''-or-''
-
-[[SDL_mutexV]](m) and SDL_UnlockMutex(m) are equivalent.
-
-''-or-'' 
-
-The macro SDL_UnlockMutex(m) will call [[SDL_mutexV]](m).
-
-<<Color2(green,I'm guessing this !UnlockMutex part will actually be omitted but I left it in since it was mentioned in the old wiki.)>>
-
-== Related Functions ==
-:[[SDL_CreateMutex]] *
-:[[SDL_mutexP]] *
-
-----
-[[CategoryAPI]], [[CategoryMutex]]
+SDL_mutexV has been replaced with [[SDL_UnlockMutex]]
