--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -26,7 +26,7 @@ There are 3 primitives available in SDL:
 <!-- #<<FullSearchCached(category:CategoryStruct CategoryMutex -SGStructures)>> -->
 
 == Functions ==
-<<FullSearch(category:CategoryMutex -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryMutex -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
