--- a/SDL_UpperBlitScaled.mediawiki
+++ b/SDL_UpperBlitScaled.mediawiki
@@ -1,49 +1,1 @@
-<!-- pragma section-numbers off -->
-<!-- pragma camelcase off -->
-'''DRAFT'''
-
-= SDL_UpperBlitScaled =
-Use this function to perform rectangle validation and clipping before passing it to [[SDL_LowerBlitScaled]]().
-
-
-== Syntax ==
-```c++
-int SDL_UpperBlitScaled(SDL_Surface*    src,
-                        const SDL_Rect* srcrect,
-                        SDL_Surface*    dst,
-                        SDL_Rect*       dstrect)
-```
-
-== Function Parameters ==
-{|
-|'''src'''
-|the [[SDL_Surface]] structure to be copied from
-|-
-|'''srcrect'''
-|the [[SDL_Rect]] structure representing the rectangle to be copied
-|-
-|'''dst'''
-|the [[SDL_Surface]] structure that is the blit target
-|-
-|'''dstrect'''
-|the [[SDL_Rect]] structure representing the rectangle that is copied into
-|}
-
-== Return Value ==
-Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
-
-== Code Examples ==
-```c++
-You can add your code example here
-```
-
-== Remarks ==
-This is the public scaled blit function.  This function calls [[SDL_LowerBlitScaled]]() ^to complete the blit^.
-
-== Related Functions ==
-:[[SDL_LowerBlitScaled]]
-:[[SDL_SetClipRect]] ???
-:[[SDL_SoftStretch]] ???
-
-----
-[[CategoryAPI]], [[CategorySurface]]
+SDL_UpperBlitScaled has been replaced with [[SDL_BlitScaled]]
