--- a/SDL_UpperBlit.mediawiki
+++ b/SDL_UpperBlit.mediawiki
@@ -1,32 +1,1 @@
-<!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
-'''DRAFT'''
-
-= SDL_UpperBlit =
-Use this function to perform a fast blit from the source surface to the destination surface.  / Use this function to perform rectangle validation and clipping before passing blit data to [[SDL_LowerBlit]](). ???
-
-
-== Syntax ==
-```c++
-int SDL_UpperBlit(SDL_Surface*    src,
-                  const SDL_Rect* srcrect,
-                  SDL_Surface*    dst,
-                  SDL_Rect*       dstrect)
-
-```
-
-== Function Parameters ==
-<<Color2(green,Note: Include from Blit<code></code>Surface starts here and extends through Remarks.)>>
-<<Include(SDL_BlitSurface, , , from="== Function Parameters ==", to="== Related Functions ==")>>
-
-
-
-
-
-
-== Related Functions ==
-:[[SDL_BlitSurface]]
-:[[SDL_LowerBlit]]
-
-----
-[[CategoryAPI]], [[CategorySurface]]
+SDL_UpperBlit has been replaced with [[SDL_BlitSurface]]
